Fixed overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 
 * {
-  font-family: "Lato", sans-serif;
+  font-family: "League Spartan", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
